# ticket-management-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  database.py  main.py  repository.py  schemas.py
tests/: test_api.py
